--- a/content/blog/fi/viestinnasta-tuottava-funktio.mdx
+++ b/content/blog/fi/viestinnasta-tuottava-funktio.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Viestinnästä tuottava funktio – miten johtaa viestintää kuin liiketoimintaa"
-description: "Muunna viestintäfunktiosi kustannuskeskuksesta strategiseksi tuottajaksi. Opi mittaamaan ROI:tä, yhdistämään liiketoimintatavoitteisiin ja johtamaan viestintää liiketoimintamielessä."
+title: "Viestinnästä tuottava funktio – johtaminen liiketoimintamielisyyttä"
+description: "Muunna viestintäfunktiosi kustannuskeskuksesta strategiseksi tuottajaksi. Opi mittaamaan ROI:tä, yhdistämään liiketoimintatavoitteisiin ja johtamaan viestintää liiketoimintamielisyyttä."
 keywords: ["viestinnän ROI", "tuottava funktio", "liiketoimintaviestintä", "viestintästrategia", "johtajaviestintä", "viestinnän mittaaminen", "strateginen viestintä"]
-ogTitle: "Viestinnästä tuottava funktio – miten johtaa viestintää kuin liiketoimintaa"
+ogTitle: "Viestinnästä tuottava funktio – johtaminen liiketoimintamielisyyttä"
 ogDescription: "Muunna viestintäfunktiosi kustannuskeskuksesta strategiseksi tuottajaksi mitattavalla liiketoimintavaikutuksella."
-date: "2024-12-19"
+date: "2025-01-22"
 author: "Lyyli.ai Tiimi"
 image: "/images/general/Mobile_UI_for_web.jpeg"
 imageAlt: "Minimaalinen kuvitus mobiilikäyttöliittymästä, joka näyttää viestintäanalytiikkaa ja ROI-mittareita, edustaa viestinnän muuttamista tuottavaksi funktioksi"
